# moss

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  build_rs_cov.profraw  clean.sh  count.sh  demo.moss  readme.md  rule.ebnf  test.moss
cmoss/: CMakeLists.txt  README.md  chunk.c  chunk.h  cmoss  common.h  compiler.c  compiler.h  debug.c  debug.h  hashtable.c  hashtable.h  main.c  main.cpp  makefile  memory.c  memory.h  object.c  object.h  readme.md  scanner.c  scanner.h  table.h  value.c  value.h  vm.c  vm.h
src/: debug.py  debug.rs  environment.rs  expr.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  macros.rs  main.rs  parser.rs  resolver.rs  scanner.rs  scope.rs  stmt.rs  token.rs
src/.cph/: .parser.rs_737be0d1d9257fa7212d09e2206f89b9.prob  .parser.rs_b2b504df1b21b7324b99bd0f0c841d8a.prob
src/tests/: mod.rs
src/tests/cases/: access_nonexisting_field.moss  basic_inheritance.moss  block.moss  call_clock.moss  classwmethod.moss  classwmethodreturn.moss  define_class.moss  echo_cmd.moss  forloop.moss  fun_mods_local_env.moss  funanon.moss  funanon2.moss  funclosure.moss  funcondreturn.moss  fundef.moss  funreturn.moss  funreturnnil.moss  funscope.moss  funverynested.moss  generic.moss  getset.moss  grep_self.moss  (+24 more)
test_file/: .gitignore  block.moss  expr.json  temp.moss  test_fib.moss  test_fn.moss  test_for.moss  test_new_test_lib.moss  test_while.moss
test_file/function/: anon_fn.moss  binding.moss  closure.moss
tests/: common.rs  integration.rs  parser_test.rs  scanner_test.rs  todo.md
tests/common/: cli.rs  file.rs  mod.rs
